overflow fix

--- a/style/style.css
+++ b/style/style.css
@@ -1749,7 +1749,7 @@ footer h5{
 }
 
 .toggler-dots:checked ~ .homepage-banner .homepage-nav .r-soc{
-    transform: translateX(500px);
+    transform: translateX(-500px);
     opacity: 0;
 }
 
